[package]
name = "totp-cli"
version = "0.2.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>"]
edition = "2018"
description = "Minimalist TOTP client without key persistence."
repository = "https://github.com/breard-r/totp-cli"
keywords = ["2fa", "totp"]
license = "ISC"
publish = false

[dependencies]

[dependencies.libreauth]
version = "^0.12"
default-features = false
features = ["oath"]
